[package]
name = "secwords"
version = "1.0.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/secwords"
repository = "https://github.com/just-do-halee/secwords"
documentation = "https://docs.rs/secwords"

description = "secure and safe password (temporary) container."

readme = "README.md"

keywords = ["algorithms", "security", "temporary", "password"]
categories = ["cryptography", "algorithms", "no-std"]

license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = [
    "unicode-normalization/default",
    "utils-results/default",
    "vep/default"
    ]

[dependencies]
zeroize = { version = "1.4.1" }
digest = { version = "0.9.0" }
vep = { version = "1.0.1", default-features = false }
utils-results = { version = "5.2.1", default-features = false }
unicode-normalization = { version = "0.1.19", default-features = false }

[dev-dependencies]
console = "0.14.1"
sha2 = "0.9.6"

[package.metadata.docs.rs]
no-deps = true